# protocol

./: README.md
backend/: .eslintrc.cjs  .gitignore  CASPER_CLOUD_EVENTS_DOCS.md  CASPER_CONFIG_EXAMPLE.md  CASPER_JS_SDK_V5_DOCS.md  ONCHAIN-RES.md  keys-formatter-examples.ts  onchain_contract_res.md  package-lock.json  package.json  pnpm-lock.yaml  ra_data_from_explore.md
backend/prisma/: schema.prisma
backend/src/: index.ts
contracts/: CHANGELOG.md  Cargo.toml  MARKET_DESIGN.md  MARKET_PARAMS.md  ODRA_LLM_DOCS.md  ODRA_LLM_DOCS.txt  Odra.toml  README.md  RE_USABLE_DEPLOY_COMMANDS.md  casper-test.env
contracts/keys/: secret_key.pem
contracts/resources/: contracts.toml
contracts/src/: a_token.rs  cep18_interface.rs  errors.rs  events.rs  lending_market.rs  lib.rs  market_registry.rs  math.rs  price_oracle.rs  types.rs
docs/: PITCH_GUIDES.md
frontend/: CASPER_CLICK_HANDLING_EVENT.md  CASPER_CLICK_INTRO_DOCS.md  CASPER_CLICK_METHODS_AND_COMPONENTS.md  CASPER_CLICK_REACT_APPROACH.md  CASPER_CLICK_TRACKING_TRANSACTION_RT.md  CASPER_JS_SDK_V2-V5_CHANGELOGS.md  ONCHAIN_RES.md  package.json  pnpm-lock.yaml
frontend/app/: client-providers.tsx  globals.css  layout.tsx  providers.tsx  transactions-context.tsx  wallet-context.tsx
frontend/components/: assets-table.tsx  borrow-info.tsx  collateral-usage.tsx  layout-header.tsx  market-details-header-2.tsx  market-details-header.tsx  market-header.tsx  reserve-configuration.tsx  supply-info.tsx  transaction-action-dialog.tsx  user-info-panel.tsx
frontend/lib/: api.ts  market-api.ts  market-helpers.ts  utils.ts
(+51 files in other folders)
