[package]
name = "anchor_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.4.0", features = [], default-features = false }
odra-modules = { version = "2.4.0", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.4.0", optional = true, default-features = false }

[dev-dependencies]
odra-test = { version = "2.4.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.4.0", features = [], default-features = false }
odra-cli = { version = "2.4.0", features = [], default-features = false }

[[bin]]
name = "anchor_protocol_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "anchor_protocol_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "anchor_protocol_cli"
path = "bin/cli.rs"
test = false

[[bin]]
name = "anchor_protocol_deploy"
path = "bin/deploy.rs"
required-features = ["livenet"]
test = false

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
